Adds PUT/DELETE Kubernetes Resources API Endpoints (#79)
* Move cluster func to kubernetes package

* Move default consts to internal pkg

* Add SpinnakerMonitorApplication func

* Add NameWithoutVersion func

* Add PUT/DELETE kuberentes resources API endpoints

* Handle namespace-scoped account

* Don't store pods since clusters page will retrieve

* Delete resources when provider is deleted
